tests/lean/217.lean.expected.out
217.lean:5:30-5:31: error: don't know how to synthesize placeholder
context:
⊢ CoreM Unit
217.lean:5:28-5:29: error: don't know how to synthesize placeholder
context:
⊢ CoreM Unit → Name → ConstantInfo → CoreM Unit
