tests/lean/217.lean
import Lean
open Lean

#eval show CoreM Unit from do
  (â† getEnv).constants.fold _ _
